fix spacing between elements in menu-items

--- a/css/menu-items.css
+++ b/css/menu-items.css
@@ -1,31 +1,106 @@
-.menu-images-container{
+.menu-images-container {
     background-color: black;
 }
-.menu-category{
-    color:white;
-    padding:2em;
+
+.menu-category {
+    color: white;
+    padding: 2em;
     font-family: Roboto;
 }
-div.menu-category> div.container{
-    color:white;
+
+div.menu-category>div.container {
+    color: white;
 }
-.menu-item-container{
+
+.menu-item-container {
     padding-top: 1em;
     font-weight: 400;
 }
-.menu-item-price{
-    color:orange;
+
+.menu-item-price {
+    color: orange;
 }
-.menu-category-title{
+
+.menu-category-title {
     font-size: 2em;
     font-weight: 700;
 }
-.menu-item-label > ul{
+
+.menu-item-label>ul {
     font-size: small;
-    font-weight:300;
+    font-weight: 300;
 }
 
-.menu-item-img{
-    
-    border: 2px solid white ;
+.menu-item-img {
+    border: 2px solid white;
 }
+
+/* Large Devices, Wide Screens */
+
+@media only screen and (max-width: 1200px) {
+    .navigation {
+        float: none;
+    }
+    .hero-title {
+        font-size: 25px;
+        line-height: 40px;
+    }
+    .hero-section {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+    .comment-info {
+        padding-left: 100px;
+    }
+    .cta-title {
+        font-size: 26px;
+        line-height: 40px;
+    }
+    .cta-section {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+    .footer-widget {
+        margin-bottom: 20px;
+    }
+    .footer-widget .widget-title {
+        margin-bottom: 0px;
+    }
+    .page-title {
+        font-size: 20px;
+    }
+    .page-caption {
+        padding: 80px 0px;
+    }
+    .childern .comment-info {
+        padding-left: 90px;
+    }
+    .childern {
+        padding-left: 0px;
+        list-style: none;
+    }
+}
+
+/* Medium Devices, Desktops */
+
+@media only screen and (max-width: 992px) {}
+
+/* Small Devices, Tablets */
+
+@media only screen and (max-width: 768px) {
+    .menu-category-title {
+        font-size: 1.5em;
+    }
+}
+
+/* Extra Small Devices, Phones */
+
+@media only screen and (max-width: 480px) {
+    .menu-category-title {
+        font-size: 1.5em;
+    }
+}
+
+/* Custom, iPhone Retina */
+
+@media only screen and (max-width: 320px) {}
